--- a/usage_wencai.ipynb
+++ b/usage_wencai.ipynb
@@ -1,184 +1,14 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Trader使用"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 初始化Trader"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from leekquant.ths_trader import ThsTrader\n",
-    "trader = ThsTrader('127.0.0.1', 3721)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 查询资金"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trader.get_balance()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 查询持仓"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trader.get_position(to_dataframe=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 查询今日成交"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trader.get_today_trades(to_dataframe=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 查询今日委托"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trader.get_today_entrusts(to_dataframe=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 买入"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 以0.311元买入513330ETF100股\n",
-    "trader.buy('513330', 0.311, 100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 卖出"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 以1.11元卖出513330ETF100股\n",
-    "trader.sell('513330', 1.11, 100)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 撤买"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trader.cancel('buy')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 撤卖"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trader.cancel('sell')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 撤所有"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "trader.cancel('all')"
-   ]
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 问财使用\n",
+    "## 同花顺问财用法\n",
     "\n",
     "`WenCai.query()`支持3个参数`question:str`, `columns:list`, `limit:int`\n",
-    "- 参数`question`: 字符串, 问财的问题语句,使用英分号;分割, 例如:非st;主板;非退市;行业;今日竞价涨幅小于3%;\n",
+    "- 参数`question`: 字符串, 问财的问题语句,使用分号;分割, 例如:`非st;主板;非退市;行业;今日竞价涨幅小于3%;`，具体用法去问财网站查阅\n",
     "- 参数`columns`: 数组, 显示的额外列，默认只显示股票简称和股票代码, 具体列名参考问财网站, 列名是包含关系\n",
     "- 参数`limit`: 整数, 控制返回的条数，默认100条，最大100条"
    ]
@@ -189,7 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "### 初始化\n",
+    "# 初始化\n",
     "from leekquant.ths_wencai import WenCai"
    ]
   },
@@ -419,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 08:57:44) \n[Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
