fix: reg_handler => reg_tick_handler

--- a/usage_quote.ipynb
+++ b/usage_quote.ipynb
@@ -67,7 +67,7 @@
     "    print(tick)\n",
     "\n",
     "# 注册回调\n",
-    "q.reg_handler(tick_handler)\n",
+    "q.reg_tick_handler(tick_handler)\n",
     "\n",
     "# 订阅你感兴趣的标的, 有任何tick数据，都会推送到回调函数里\n",
     "# 最多订阅5只，订阅多了不会报错，也不会推送任何数据\n",
@@ -147,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.15"
+   "version": "3.8.15 (default, Nov 24 2022, 08:57:44) \n[Clang 14.0.6 ]"
   },
   "orig_nbformat": 4,
   "vscode": {
