add: 支持订阅全市场概况

--- a/usage_quote.ipynb
+++ b/usage_quote.ipynb
@@ -15,7 +15,7 @@
     "### 订阅TICK\n",
     "\n",
     "* 报价采用订阅-推送模式，订阅标的可以是全市场任何标的 (股票/指数/可转债/ETF等都可以)\n",
-    "* 目前限制为：每IP只允许一个连接，每个连接只允许最多订阅`5只`标的\n",
+    "* 目前限制为：每IP只允许一个连接，每个连接只允许最多订阅`20只`标的\n",
     "* 数据为实时推送，推送时间为交易日早`9:15:00`-`15:00:00`, 交易时间为3秒推送时间切片, 中午休市为1分钟推送\n",
     "* 订阅必须是数组，代码必须是9位，沪市以`.SH`结尾, 深市以`.SZ`结尾\n",
     "* `time`为tick从交易所出来的时间戳，可自行测试时间延迟, 可转债延迟在几十到几百毫秒，股票延迟在几百毫秒到1-2秒都算正常\n",
@@ -95,7 +95,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## 稍后提供"
+    "def overview_handler(data):\n",
+    "    print('收到市场概况:', data)\n",
+    "q.reg_overview_handler(overview_handler)\n",
+    "q.sub_overview()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 返回数据示例\n",
+    "```JSON\n",
+    "{\"code\":\"000001.SH,\"date\":20230109,\"time\":112506000,\"pre_close\":113677321,\"price\":114350117,\"open\":114113703,\"high\":114905947,\"low\":114086652,\"vol\":22744801189,\"amount\":294701143453,\"pct_chg\":0.59,\"wz\":[\"11:25\",\"265472.19\",\"154486.05\",\"419958.24\"],\"zdt\":[35,7,21,62.5],\"rise_down\":[0,0,0]}\n",
+    "```\n",
+    "\n",
+    "#### 返回字段说明\n",
+    "- `code` 可能为: 000001.SH, 399001.SZ, 399006.SZ, 对应 沪市，深市，创业板\n",
+    "- 所有价格需要除以10000\n",
+    "- `pct_chg` 为涨跌幅\n",
+    "- `wz`为北向外资流入情况, 数组4位，分别为: `时间`，`总额`，`沪市流入`，`深市流入`\n",
+    "- `zdt` 为市场张跌停概况，数组4位，分别为: `涨停数`, `炸板数`, `跌停数`, `炸板率`\n",
+    "- `rise_down` 为市场涨跌概况，数组3位，分别为：`上涨总家数`，`平盘总家数`，`下跌总家数`"
    ]
   },
   {
